[eRUNNER UI 001 -05] Vite + React eRunner GUI install

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,17 @@
 
 .DS_Store
 UIDev/.DS_Store
-UIDev/UIDev.react/.DS_Store
+UIDej/UIDev.react/.DS_Store
 UIDev/UIDev.sass/.DS_Store
 
-# Set ignore for all vscode
+# Editor directories and files
 
-.vscode/* 
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
