--- a/UIdev/UIdev.react/eRunnerGUI/.gitignore
+++ b/UIdev/UIdev.react/eRunnerGUI/.gitignore
@@ -22,6 +22,7 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+.eslintrc.cjs
 
 # Ignore compiled css files. Compile the SASS files before runing the application.
 src/css/*
