--- a/UIdev/UIdev.react/eRunnerGUI/.env
+++ b/UIdev/UIdev.react/eRunnerGUI/.env
@@ -1,1 +1,6 @@
+# Cell default configuration cells.mjs & cells.cjs
+SOURCE_PATH=public/data/cell.json
+DESTINATION_DIR=public/data/banner
+
+# Schema property type generator schema.mjs & schema.cjs
 SCHEMA_PATH=/Users/margaretasandor/Projects/JavaScript/_projects/eRunner.dApp/UIdev/UIdev.react/eRunnerGUI/public/data/cell.json
