Generate PropertyType schemas for all cells config files

--- a/UIdev/UIdev.react/eRunnerGUI/.env
+++ b/UIdev/UIdev.react/eRunnerGUI/.env
@@ -3,4 +3,4 @@ SOURCE_PATH=public/data/cell.json
 DESTINATION_DIR=public/data/banner
 
 # Schema property type generator schema.mjs & schema.cjs
-SCHEMA_PATH=/Users/margaretasandor/Projects/JavaScript/_projects/eRunner.dApp/UIdev/UIdev.react/eRunnerGUI/public/data/cell.json
+SCHEMA_PATH=src/data/schemas/banner
